--- a/views/index.html
+++ b/views/index.html
@@ -3,20 +3,43 @@
 {% block content %}
   
   <div class="page-header">
-    <h1>Welcome to Twitter.js!</h1>
+    <h1>{{title}}</h1>
   </div>
   <div class="row">
     <div class="col-md-3">
       <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      <b>Your Name</b><br>
+      <b>Nimit Maru</b><br>
       100 followers
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 tweetbox">
     
       <!-- display tweets here -->
-      {% for tweet in tweets %}
+
+<!--       {% for tweet in tweets %}
+      <ul>
+        <img>
+        <li>{{tweet.name}}</li>
         <li>{{tweet.text}}</li>
+      </ul>
+      {% endfor %} -->
+
+      {% for tweet in tweets %}
+      <ul>
+        <li><a href="/users/{{tweet.name}}">{{tweet.name}}</a> - {{tweet.text}}</li>
+      </ul>
       {% endfor %}
+
+      {% if showForm %}
+      <form action="/tweets" method="POST">
+        <label for="name_field">Name:</label>
+        <input name="name" type="text" id="name_field" />
+
+        <label for="text_field">Text:</label>
+        <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+        <input type="submit" value="Submit" />
+      </form>
+      {% endif %}
       
     </div>
   </div>
